--- a/site/src/components/CodeBlock.css
+++ b/site/src/components/CodeBlock.css
@@ -8,7 +8,6 @@
   font-size: 12.5px;
   line-height: 1.6;
   color: var(--color-text);
-  background: transparent;
   overflow: auto;
   white-space: pre;
   tab-size: 2;
@@ -17,7 +16,6 @@
 .code-block code {
   font-family: inherit;
   font-size: inherit;
-  background: transparent;
   padding: 0;
   color: inherit;
 }
